# tinyquant

./: .gitignore  NEW_QUANT.md  README.md  gmon.out  pyproject.toml  pytest.ini  run_integration_tests  style-fix.sh
.github/workflows/: ci.yml
extra/huggingface-basic/: llama_1b.ipynb  llama_1b.py  quickstart.ipynb
src/tinyquant/: __init__.py
tests/: test_meta.py  test_non_quantizer.py  test_none_quantizer.py  tests_non_quantizer.py
tests/integrations/higgs/: pyproject.toml  test_higgs.py
tests/integrations/hqq/: pyproject.toml  test_hqq.py
tests/integrations/nf4/: pyproject.toml  test_nf4.py
tests/integrations/sinq/: pyproject.toml  test_sinq.py
tinyquant/: __init__.py  quantized_linear.py  quantizer.py  utils.py
tinyquant/integrations/: __init__.py  higgs.py  hqq.py  nf4.py  none.py
tinyquant/integrations/quarot/: fast_hadamard_transform.py  gptq_utils.py  hadamard_utils.py  model_utils.py  quant_utils.py  quarot.py  rotation_utils.py
tinyquant/quantizers/: __init__.py  nf4.py  nf4_quantizer.py  none.py  none_quantizer.py
