[project]
name = "tinyquant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vladimir Malinovskii", email = "galqiwi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
