[project]
name = "tinyquant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vladimir Malinovskii", email = "galqiwi@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "torch>=2.7.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20250516",
    "types-transformers>=0.1.0",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "bitsandbytes.*"
module = "higgs_kernels.*"
ignore_missing_imports = true

[tool.uv.workspace]
members = [
    "tests/integrations/nf4",
    "tests/integrations/higgs",
    ".",
]
